# snaze

./: .gitignore  CMakeLists.txt  Notas_U3.xlsx  README.md  snaze
data/: maze1.txt
include/: Level.h  Snake.h  SnakeGame.h  Utils.h
src/: Level.cpp  Snake.cpp  SnakeGame.cpp  Snaze.cpp  Utils.cpp
